--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "fake_news_detection"}]
 python = "^3.9"
 kaggle = "^1.5.13"
 pandas = "^1.5.3"
+scikit-learn = "^1.2.2"
 
 
 [build-system]
