--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,11 @@ python = "^3.9"
 kaggle = "^1.5.13"
 pandas = "^1.5.3"
 scikit-learn = "^1.2.2"
+nltk = "^3.8.1"
 
+
+[tool.poetry.group.dev.dependencies]
+jupyter = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core"]
